[project]
name = "claude-sessions"
version = "0.2.2"
description = "TUI browser for Claude Code sessions"
authors = [{ name = "Amit Malhotra" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["textual"]

[project.scripts]
claude-sessions = "claude_sessions:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
include = ["claude_sessions.py"]
